--- a/spotify-meteor/imports/ui/App.css
+++ b/spotify-meteor/imports/ui/App.css
@@ -1,32 +1,56 @@
-.App {
-  text-align: center;
+:root {
+    --blue: #4687d6;
+    --green: #1db954;
+    --white: #f8f8f8;
+    --black: #282c34;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body {
+    background-color: #282c34;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#spotitfy-img {
+    background: url("/images/Spot-it-fy.png") no-repeat center;
+    background-size: contain;
+    height: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+#login-sign-in-link {
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#spotitfy-instructions-container > div {
+    padding: 55px 50px;
+    border-radius: 20px;
+    box-shadow: 0 0 12px -3px black;
+    font-size: 1.3em;
+    line-height: 0;
+}
+
+#spotitfy-instructions-container > div:nth-child(1) {
+    background-color: var(--black);
+    transform: rotate(10deg) translate(20px, 77px);
+    z-index: 1;
+    border: 2px solid white;
+    color: white;
+    width: 80%;
+}
+
+#spotitfy-instructions-container > div:nth-child(2) {
+    background-color: var(--green);
+    z-index: 2;
+    transform: rotate(-2deg);
+    text-align: right;
+}
+
+#spotitfy-instructions-container > div:nth-child(3) {
+    background-color: var(--black);
+    transform: rotate(4deg) translateY(-30px);
+    border: 2px solid white;
+    color: white;
+    text-align: center;
+}
+
+#spotitfy-instructions-container {
+    padding: 20px;
 }
