--- a/spotify-meteor/imports/ui/modal/modal.css
+++ b/spotify-meteor/imports/ui/modal/modal.css
@@ -48,3 +48,14 @@
 .spotitfy-modal-hidden {
     display: none;
 }
+
+#spotitfy-modal-error {
+    background-color: firebrick;
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 5px 10px;
+    border-radius: 5px;
+}
