--- a/spotify-meteor/imports/ui/Spotitfy/Spotitfy.css
+++ b/spotify-meteor/imports/ui/Spotitfy/Spotitfy.css
@@ -1,19 +1,51 @@
 .whiteAndCenter {
-  color: var(--white);
-  text-align: center;
+    color: var(--white);
+    text-align: center;
 }
 
 .gameBoard1 {
-  display: flex;
-  /* flex-direction: row; */
-  justify-content: space-between;
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-between;
 }
 
 .leaderBoard {
-  flex: initial;
-  width:300px;
+    flex: initial;
+    width: 300px;
 }
 
 .mainBoard {
-  flex:1;
+    flex: 1;
+}
+
+.song-option {
+    background-color: var(--white);
+    color: var(--black);
+    padding: 10px;
+    width: 80%;
+    border: 1px solid var(--black);
+    cursor: pointer;
+    border-radius: 20px;
+    margin: 3px;
+}
+
+.song-option:hover {
+    background-color: var(--black);
+    border: 1px solid var(--white);
+    color: var(--white);
+}
+
+#song-options-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.disabled {
+    pointer-events: none;
+    background-color: gray;
+}
+
+.whiteAndCenter .fa-crown {
+    color: rgb(228, 213, 4);
 }
