--- a/spotify-meteor/imports/ui/App.css
+++ b/spotify-meteor/imports/ui/App.css
@@ -1,3 +1,5 @@
+/* Juan Useche: Procuren organizar su CSS diviendo lo que son los clases Id's y componentes, pueden hacerlo mediante comentarios como headers */
+
 :root {
     --blue: #4687d6;
     --green: #1db954;
